After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709728 - dvdemux/dvdec: Sends stream-start, caps and segment events in wrong order
dvdemux/dvdec: Sends stream-start, caps and segment events in wrong order
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other Linux
: Normal normal
: 1.2.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-09 13:25 UTC by Cyril Baletaud
Modified: 2013-10-10 12:14 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Cyril Baletaud 2013-10-09 13:25:14 UTC
gst-launch-1.0 --version
gst-launch-1.0 version 1.2.0
GStreamer 1.2.0 
http://packages.gentoo.org/package/media-libs/gstreamer

gst-launch-1.0 dv1394src ! dvdemux ! dvdec ! autovideosink
Setting pipeline to PAUSED ...
Pipeline is live and does not need PREROLL ...
Setting pipeline to PLAYING ...
New clock: GstSystemClock

(gst-launch-1.0:30151): GStreamer-WARNING **: gstpad.c:4506:store_sticky_event:<dvdemux0:audio> Sticky event misordering, got 'segment' before 'stream-start'

(gst-launch-1.0:30151): GStreamer-WARNING **: gstpad.c:4506:store_sticky_event:<dvdemux0:audio> Sticky event misordering, got 'segment' before 'caps'

(gst-launch-1.0:30151): GStreamer-WARNING **: gstpad.c:4506:store_sticky_event:<dvdemux0:video> Sticky event misordering, got 'segment' before 'stream-start'

(gst-launch-1.0:30151): GStreamer-WARNING **: gstpad.c:4506:store_sticky_event:<dvdec0:src> Sticky event misordering, got 'segment' before 'stream-start'

....

and this for all elements. The rendering graph works well.
Comment 1 Sebastian Dröge (slomo) 2013-10-09 15:47:26 UTC
commit fa399bf834b0f9baace38b92322e1feccdb98577
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Wed Oct 9 17:46:33 2013 +0200

    dvdemux: Send stream-start, caps and segment events in the right order
    
    https://bugzilla.gnome.org/show_bug.cgi?id=709728
Comment 2 Cyril Baletaud 2013-10-10 07:53:36 UTC
Fine, the patch works well for dvdemux, but i have now (with the same pipeline) :

(gst-launch-1.0:16585): GStreamer-WARNING **: gstpad.c:4506:store_sticky_event:<dvdec0:src> Sticky event misordering, got 'segment' before 'caps'

(gst-launch-1.0:16585): GStreamer-WARNING **: gstpad.c:4506:store_sticky_event:<sink:proxypad0> Sticky event misordering, got 'segment' before 'caps'

(gst-launch-1.0:16585): GStreamer-WARNING **: gstpad.c:4506:store_sticky_event:<autovideosink0-actual-sink-xvimage:sink> Sticky event misordering, got 'segment' before 'caps'

(gst-launch-1.0:16585): GStreamer-WARNING **: gstpad.c:4506:store_sticky_event:<autovideosink0:sink> Sticky event misordering, got 'segment' before 'caps'

but with libav decoder, i don't have any warning :

cyril@gentoothinkstation ~ $ gst-launch-1.0 dv1394src ! dvdemux ! avdec_dvvideo ! autovideosink
Setting pipeline to PAUSED ...
Pipeline is live and does not need PREROLL ...
Setting pipeline to PLAYING ...
New clock: GstSystemClock
Redistribute latency...
Comment 3 Sebastian Dröge (slomo) 2013-10-10 11:53:18 UTC
Thanks, also fixed now :) Will backport to 1.2 in a few minutes

commit c65a8881f9f59168af685487e303d5dfcd588599
Author: Sebastian Dröge <slomo@circular-chaos.org>
Date:   Thu Oct 10 13:52:35 2013 +0200

    dvdec: Don't send segment event before caps
    
    https://bugzilla.gnome.org/show_bug.cgi?id=709728
Comment 4 Cyril Baletaud 2013-10-10 12:14:46 UTC
Wahou very fast ... :)
Thanks a lot, plugin patched now works well without warning.