dvdemux: Send stream-start, caps and segment events in the right order

https://bugzilla.gnome.org/show_bug.cgi?id=709728